tests/typing/bad/testfile-long-1.c
#include <stdlib.h>
#include <stdio.h>
#include <stdbool.h>

int main() {
  void *a = 3

    +3;
  return a;
}
